--- a/frontend/src/components/topbar/topbar.css
+++ b/frontend/src/components/topbar/topbar.css
@@ -12,10 +12,11 @@
     min-height: var(--topbar-height);
     width: 100%;
     transition-duration: .2s;
+    border-bottom: 1px solid var(--primary-color);
 }
 
 .dark .topbar {
-    border-bottom: 1px solid var(--secondary-color);
+    border-color: var(--secondary-color);
 }
 
 .topbar a {
