--- a/frontend/src/stylesheets/variables.css
+++ b/frontend/src/stylesheets/variables.css
@@ -2,7 +2,7 @@
 :root {
     --sidemenu_width: 100%;
     --sidemenu_max-width: 100%;
-    --topbar-height: 70px;
+    --topbar-height: 71px;
 
     --background-color: rgb(235, 238, 240);
     --primary-color: rgb(200, 170, 175);
